--- a/etch-a-sketch/styles.css
+++ b/etch-a-sketch/styles.css
@@ -1,14 +1,12 @@
 .square-container {
   display: grid;
-  grid-template-columns: repeat(16, 22px);
+  grid-template-columns: repeat(16, 1rem);
   justify-content: center;
 }
 
 .square {
-  width: 20px;
-  height: 20px;
-  border: solid;
-  border-width: 1px;
+  width: 1rem;
+  height: 1rem;
 }
 
 .square:hover {
