--- a/etch-a-sketch/styles.css
+++ b/etch-a-sketch/styles.css
@@ -2,6 +2,12 @@
   box-sizing: border-box;
 }
 
+.grid {
+  display: grid;
+  width: 500px;
+  height: 500px;
+}
+
 .square {
   border: solid;
   width: 1rem;
