--- a/etch-a-sketch/styles.css
+++ b/etch-a-sketch/styles.css
@@ -2,14 +2,21 @@
   box-sizing: border-box;
 }
 
+.grid-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+}
+
 .grid {
   display: grid;
   width: 500px;
   height: 500px;
+  margin: 1rem;
 }
 
 .square {
   border: solid;
-  width: 1rem;
-  height: 1rem;
 }
